--- a/styles/style.css
+++ b/styles/style.css
@@ -244,11 +244,12 @@ background-image:url(../images/logobg.gif);
 }
 
 .sidebar-navigation li a{
-    padding-left:70px;
+    padding:0 110px 0 70px;
     color:#FFFFFF;
     font-family: 'Oswald', sans-serif;
     font-weight:normal;
     font-size:17px;
+    text-align:left;
     
 }
 
